--- a/_dev/css/components/categories.scss
+++ b/_dev/css/components/categories.scss
@@ -452,8 +452,10 @@
     #left-column,
     .left-column {
       flex: initial;
-      margin-left: 15px;
-      margin-right: 15px;
+      //margin-left: 15px;
+      //margin-right: 15px;
+      padding-left: 15px;
+      padding-right: 15px;
     }
     #main {
       margin-left: 15px;
