--- a/_dev/css/components/stores.scss
+++ b/_dev/css/components/stores.scss
@@ -1,14 +1,13 @@
 #stores {
   .page-stores {
     .store-item {
-      padding-left: 0.75rem;
-      padding-right: 0.75rem;
+      margin-bottom: 1rem;
     }
     //width: 85%;
     //margin: 0 auto;
     .store-picture {
       img {
-        max-width: 100%;
+        //max-width: 100%;
       }
     }
     .store-item-container {
