--- a/_dev/css/theme.scss
+++ b/_dev/css/theme.scss
@@ -38,6 +38,7 @@
 @import "components/featured-products-slider";
 //Material Icons vida DATA-ATTR
 @import "components/material-icons-data";
+@import "components/responsive-breakpoint";
 @import "components/util";
 @import "components/hamburger";
 
